# nitinol

./: .gitignore  Cargo.toml  README.md  TODO.md
examples/: 01-basic_process.rs
examples/1.basic-process/: Cargo.toml
examples/1.basic-process/src/: main.rs
examples/2.persistence-process-inmemory/: Cargo.toml
examples/2.persistence-process-inmemory/src/: main.rs
examples/3.persistence-process-sqlite/: Cargo.toml
examples/3.persistence-process-sqlite/src/: main.rs
examples/a-basic-process/: Cargo.toml
examples/a-basic-process/src/: main.rs
nitinol-agent/: Cargo.toml
nitinol-agent/src/: channel.rs  context.rs  lifecycle.rs  refs.rs  registry.rs
nitinol-agent/src/channel/: applicator.rs  publisher.rs
nitinol-agent/src/refs/: any.rs
nitinol-cluster/: Cargo.toml
nitinol-core/: Cargo.toml
nitinol-core/src/: command.rs  errors.rs  event.rs  identifier.rs  lib.rs  projection.rs  resolver.rs
nitinol-core/src/resolver/: projection.rs
nitinol-eventstream/: Cargo.toml
nitinol-eventstream/src/: eventstream.rs  extension.rs  global.rs  lib.rs  process.rs  resolver.rs  subscriber.rs
nitinol-eventstream/src/extension/: publisher.rs  subscriber.rs
nitinol-eventstream/src/process/: publisher.rs  subscriber.rs
nitinol-eventstream/tests/: test_basic_pub_sub.rs  test_process_pub_sub.rs  test_subscription.rs
nitinol-executor/: Cargo.toml
nitinol-executor/src/: errors.rs  lib.rs
nitinol-macro/: Cargo.toml
nitinol-macro/src/: lib.rs
nitinol-macro/tests/: proc_derive_command.rs  proc_derive_event.rs
nitinol-persistence/: Cargo.toml
nitinol-persistence/src/: eventstore.rs  extension.rs  global.rs  lib.rs  process.rs  v3.rs  writer.rs
nitinol-persistence/src/v3/: error.rs  process.rs  process_ext.rs
nitinol-persistence/src/v3/process/: messages.rs
nitinol-process/: Cargo.toml
nitinol-process/src/: channel.rs  context.rs  errors.rs  extension.rs  lib.rs  lifecycle.rs  manager.rs  message.rs  process.rs  queue.rs  receptor.rs  refs.rs  registry.rs  task.rs
nitinol-process/src/channel/: applicator.rs  command.rs  employ.rs  event.rs  forget.rs  publisher.rs
nitinol-process/src/context/: status.rs
nitinol-process/src/receptor/: any.rs
nitinol-process/src/refs/: any.rs
nitinol-process/src/task/: command.rs  entrust.rs  event.rs  receive.rs
nitinol-projection/: Cargo.toml
nitinol-projection/src/: errors.rs  fixtures.rs  global.rs  lib.rs  projection.rs  projector.rs  resolver.rs
nitinol-projection/src/resolver/: projection.rs
nitinol-protocol/: Cargo.toml
nitinol-protocol/src/: adapter.rs  errors.rs  io.rs  lib.rs  payload.rs
nitinol-protocol/src/adapter/: inmemory.rs  sqlite.rs
nitinol-protocol/src/adapter/inmemory/: row.rs
nitinol-protocol/src/errors/: read.rs  write.rs
nitinol-protocol/src/io/: read.rs  write.rs
nitinol-protocol/tests/: write_inmemory.rs
nitinol-resolver/: Cargo.toml
nitinol-resolver/src/: errors.rs  lib.rs  mapping.rs  resolver.rs
nitinol-resolver/src/mapping/: process.rs
spectroscopy-agent/: Cargo.toml
spectroscopy-agent/src/: channel.rs  errors.rs  identifier.rs  lib.rs  lifecycle.rs  refs.rs  registry.rs
spectroscopy-agent/src/channel/: applicator.rs  publisher.rs
spectroscopy-core/: Cargo.toml
spectroscopy-core/src/: errors.rs  event.rs  lib.rs  resolver.rs
spectroscopy-projection/: Cargo.toml
spectroscopy-projection/src/: fixtures.rs  lib.rs
spectroscopy-protocol/: Cargo.toml
spectroscopy-protocol/src/: adapter.rs  errors.rs  io.rs  payload.rs
spectroscopy-protocol/src/adapter/: errors.rs  inmemory.rs
spectroscopy-protocol/src/adapter/inmemory/: lock.rs  row.rs
spectroscopy-protocol/src/io/: read.rs  write.rs
src/: agent.rs  errors.rs  event.rs  fixture.rs  handler.rs  identifier.rs  lib.rs  mapping.rs  projection.rs  protocol.rs
src/agent/: any.rs  applicator.rs  context.rs  errors.rs  extension.rs  handler.rs  lifecycle.rs  publisher.rs  registry.rs
src/protocol/: errors.rs  read.rs  write.rs
tests/: basic_process.rs  projection_impl.rs  test_agent.rs  test_impl_entity.rs  test_impl_projector.rs  test_projection.rs
