[workspace]
members = [
  ".",
  "nitinol-core",
  "nitinol-eventstream",
  "nitinol-macro",
  "nitinol-process",
  "nitinol-protocol",
  "nitinol-projection",
  "nitinol-persistence",
]

resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["ReiRokusanami <reirokusanami.rdh@gmail.com>"]
repository = "https://github.com/HalsekiRaika/nitinol"
description = "A utilities for event sourcing"

[features]
macro = ["nitinol-macro"]
process = ["nitinol-process"]
process-ext = ["process"]
eventstream = ["process", "nitinol-eventstream"]
protocol = ["nitinol-protocol"]
sqlite = ["protocol", "nitinol-protocol/sqlite"]
inmemory = ["protocol", "nitinol-protocol/inmemory"]
persistence = ["process", "process-ext", "protocol", "nitinol-persistence"]
projection = ["nitinol-projection"]

[package]
name = "nitinol"
version = "0.2.0-alpha"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["ReiRokusanami <reirokusanami.rdh@gmail.com>"]
repository = "https://github.com/HalsekiRaika/nitinol"
description = "A utilities for event sourcing"

[dependencies]
nitinol-core = { path = "nitinol-core" }
nitinol-eventstream = { path = "nitinol-eventstream", optional = true }
nitinol-macro = { path = "nitinol-macro", optional = true }
nitinol-protocol = { path = "nitinol-protocol", optional = true }
nitinol-process = { path = "nitinol-process", optional = true }
nitinol-projection = { path = "nitinol-projection", optional = true }
nitinol-persistence = { path = "nitinol-persistence", optional = true }


[dev-dependencies]
nitinol = { path = ".", features = ["macro", "process", "persistence", "projection", "inmemory"] }

async-trait = "^0.1"

serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
anyhow = "^1"

tokio = { version = "^1", features = ["macros", "rt-multi-thread"] }
