[workspace]
members = [
  ".",
  "nitinol-*",
  "examples/*"
]
default-members = [
  ".",
  "nitinol-*"
]

resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["ReiRokusanami <reirokusanami.rdh@gmail.com>"]
repository = "https://github.com/HalsekiRaika/nitinol"
description = "A utilities for event sourcing"

[features]
macro = ["nitinol-macro"]
process = ["nitinol-process"]
process-ext = ["process"]
eventstream = ["process", "nitinol-eventstream", "nitinol-resolver"]
protocol = ["nitinol-protocol"]
protocol-sqlx = ["protocol", "nitinol-protocol/sqlx"]
sqlite = ["protocol", "nitinol-protocol/sqlite"]
inmemory = ["protocol", "nitinol-protocol/inmemory"]
persistence = ["process", "process-ext", "protocol", "nitinol-persistence"]
projection = ["nitinol-projection", "nitinol-resolver"]

[package]
name = "nitinol"
version = "0.2.0-alpha"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["ReiRokusanami <reirokusanami.rdh@gmail.com>"]
repository = "https://github.com/HalsekiRaika/nitinol"
description = "A utilities for event sourcing"

[dependencies]
nitinol-core = { path = "nitinol-core" }
nitinol-eventstream = { path = "nitinol-eventstream", optional = true }
nitinol-macro = { path = "nitinol-macro", optional = true }
nitinol-protocol = { path = "nitinol-protocol", optional = true }
nitinol-process = { path = "nitinol-process", optional = true }
nitinol-projection = { path = "nitinol-projection", optional = true }
nitinol-persistence = { path = "nitinol-persistence", optional = true }
nitinol-resolver = { path = "nitinol-resolver", optional = true }
