[workspace]
members = [
  ".",
  "nitinol-*",
  "examples/*"
]
default-members = [
  ".",
  "nitinol-*"
]

resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["ReiRokusanami <reirokusanami.rdh@gmail.com>"]
repository = "https://github.com/HalsekiRaika/nitinol"
description = "A utilities for event sourcing"

[workspace.dependencies]
thiserror = "^2"
async-trait = "^0.1"
tokio = { version = "^1", default-features = false }
tracing = "^0.1"
futures-util = { version = "^0.3", default-features = false }
time = { version = "^0.3", default-features = false }

[features]
macro = ["nitinol-macro"]
process = ["nitinol-process"]
eventstream = ["process", "nitinol-eventstream", "nitinol-resolver"]
protocol = ["nitinol-protocol"]
protocol-sqlx = ["protocol", "nitinol-protocol/sqlx"]
persistence = ["process", "protocol", "nitinol-persistence"]
projection = ["nitinol-projection", "nitinol-resolver"]

[package]
name = "nitinol"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["ReiRokusanami <reirokusanami.rdh@gmail.com>"]
repository = "https://github.com/HalsekiRaika/nitinol"
description = "A utilities for event sourcing"

[dependencies]
nitinol-core = { version = "1.0.0", path = "nitinol-core" }
nitinol-eventstream = { version = "0.1.0", path = "nitinol-eventstream", optional = true }
nitinol-macro = { version = "0.1.0", path = "nitinol-macro", optional = true }
nitinol-protocol = { version = "0.1.0", path = "nitinol-protocol", optional = true }
nitinol-process = { version = "0.1.1", path = "nitinol-process", optional = true }
nitinol-projection = { version = "0.1.2", path = "nitinol-projection", optional = true }
nitinol-persistence = { version = "0.1.0", path = "nitinol-persistence", optional = true }
nitinol-resolver = { version = "0.1.0", path = "nitinol-resolver", optional = true }
