[package]
name = "nitinol-agent"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[dependencies]
async-trait = "^0.1"
thiserror = "^2"

tokio = { version = "^1", features = ["sync", "rt-multi-thread"], default-features = false }
tracing = "0.1"
nitinol-core = { path = "../nitinol-core" }
