[package]
name = "nitinol-core"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[features]
default = ["markers", "futures-util"]
markers = []

[dependencies]
serde = "^1"
thiserror = { workspace = true }