[package]
name = "nitinol-core"
version = "1.0.0"
description = "Core library for Nitinol that defines the assumptions for realizing CQRS+ES."
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }


[dependencies]
serde = "^1"
thiserror = { workspace = true }