[package]
name = "nitinol-eventstream"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
tokio = { version = "^1", features = ["sync", "rt-multi-thread"] }

async-trait = "^0.1"

tracing = "^0.1"

nitinol-core = { path = "../nitinol-core" }
nitinol-process = { path = "../nitinol-process" }
nitinol-protocol = { path = "../nitinol-protocol" }
nitinol-projection = { path = "../nitinol-projection" }

[dev-dependencies]
tokio = { version = "^1", features = ["macros", "rt-multi-thread", "time"] }

tracing-subscriber = "^0.3"

serde = { version = "^1", features = ["derive"] }
serde_json = "^1"

nitinol = { path = "../.", features = ["macro", "process"] }