[package]
name = "nitinol-eventstream"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true

[features]
global = []

[dependencies]
anyhow = "^1"
tokio = { version = "^1", features = ["sync", "rt-multi-thread"] }

async-trait = "^0.1"

tracing = "^0.1"

nitinol-core = { path = "../nitinol-core" }
nitinol-process = { path = "../nitinol-process" }
nitinol-protocol = { path = "../nitinol-protocol" }
nitinol-resolver = { path = "../nitinol-resolver", features = ["process"] }

[dev-dependencies]
uuid = { version = "^1", features = ["v4", "serde"] }
tokio = { version = "^1", features = ["macros", "rt-multi-thread", "time"] }

tracing-subscriber = { version = "^0.3", features = ["env-filter"] }

serde = { version = "^1", features = ["derive"] }
serde_json = "^1"

nitinol = { path = "../.", features = ["macro", "process"] }