[package]
name = "nitinol-eventstream"
version = "0.1.0"
description = "A library for Nitinol that provides an EventStream that can be used locally."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
global = []

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt-multi-thread"] }
tracing = { workspace = true }

nitinol-core = { version = "1.0.0", path = "../nitinol-core" }
nitinol-process = { version = "0.1.0", path = "../nitinol-process" }
nitinol-protocol = { version = "0.1.0", path = "../nitinol-protocol" }
nitinol-resolver = { version = "0.1.0", path = "../nitinol-resolver", features = ["process"] }

[dev-dependencies]
uuid = { version = "^1", features = ["v4", "serde"] }
tokio = { version = "^1", features = ["macros", "rt-multi-thread", "time"] }

tracing-subscriber = { version = "^0.3", features = ["env-filter"] }

serde = { version = "^1", features = ["derive"] }
serde_json = "^1"

nitinol = { path = "../.", features = ["macro", "process"] }