[package]
name = "nitinol-executor"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
async-trait = "^0.1"
pin-project = "^1"
nitinol-process = { path = "../nitinol-process" }
nitinol-core = { path = "../nitinol-core" }

[dev-dependencies]
tokio = { version = "^1", features = ["macros", "time"] }