[package]
name = "nitinol-macro"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true

[lib]
proc-macro = true

[dependencies]
nitinol-core = { path = "../nitinol-core" }
darling = "0.20.10"
quote = "^1"
syn = { version = "^2", features = ["full"] }

[dev-dependencies]
serde_json = "^1"
serde = { version = "^1", features = ["derive"] }