[package]
name = "nitinol-persistence"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true

[features]
global = []

[dependencies]
async-trait = "^0.1"
tracing = "^0.1"

nitinol-core = { path = "../nitinol-core" }
nitinol-process = { path = "../nitinol-process" }
nitinol-protocol = { path = "../nitinol-protocol" }
