[package]
name = "nitinol-persistence"
version = "0.1.1"
description = "Extension library for `nitinol-process` to persist Events using `nitinol-protocol`"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
global = []

[dependencies]
async-trait = { workspace = true }

tracing = { workspace = true }

nitinol-core = { version = "1.0.0", path = "../nitinol-core" }
nitinol-process = { version = "0.1.0", path = "../nitinol-process" }
nitinol-protocol = { version = "0.1.0", path = "../nitinol-protocol" }
