[package]
name = "nitinol-process"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[dependencies]
thiserror = { workspace = true }
async-trait = { workspace = true }

tokio = { workspace = true, features = ["sync", "rt-multi-thread"] }

tracing = { workspace = true }

nitinol-core = { version = "=1", path = "../nitinol-core" }

[dev-dependencies]
tokio = { version = "^1", features = ["time", "macros"] }