[package]
name = "nitinol-process"
version = "0.1.0"
description = "Pseudo-actor type process library for Nitinol using green thread of tokio"
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[dependencies]
thiserror = { workspace = true }
async-trait = { workspace = true }

tokio = { workspace = true, features = ["sync", "rt-multi-thread"] }

tracing = { workspace = true }

nitinol-core = { version = "=1.0.0", path = "../nitinol-core" }

[dev-dependencies]
tokio = { workspace = true, features = ["time", "macros"] }