[package]
name = "nitinol-projection"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[features]
global = []

[dependencies]
async-trait = "^0.1"
thiserror = "^2"
futures-util = { version = "^0.3", features = ["std"], default-features = false }

tracing = { version = "^0.1" }
time = { version = "^0.3", default-features = false }

nitinol-core = { path = "../nitinol-core" }
nitinol-resolver = { path = "../nitinol-resolver" }
nitinol-protocol = { path = "../nitinol-protocol" }
