[package]
name = "nitinol-projection"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[features]
global = []

[dependencies]
thiserror = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }

tracing = { workspace = true }
time = { workspace = true, features = ["std"] }

nitinol-core = { version = "1.0.0", path = "../nitinol-core" }
nitinol-resolver = { path = "../nitinol-resolver" }
nitinol-protocol = { path = "../nitinol-protocol" }
