[package]
name = "nitinol-projection"
version = "0.1.0"
description = "A library for Nitinol to project Events to Entity using nitinol-protocol"
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }

[features]
global = []

[dependencies]
thiserror = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true, features = ["std"] }

tracing = { workspace = true }
time = { workspace = true, features = ["std"] }

nitinol-core = { version = "1.0.0", path = "../nitinol-core" }
nitinol-resolver = { version = "0.1.0", path = "../nitinol-resolver" }
nitinol-protocol = { version = "0.1.0", path = "../nitinol-protocol" }
