[package]
name = "nitinol-protocol"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }


[dependencies]
nitinol-core = { path = "../nitinol-core" }

async-trait = "^0.1"
thiserror = { workspace = true }
sqlx = { version = "^0.8", features = ["migrate", "macros", "time"], optional = true }
time = { version = "^0.3", features = [] }
