[package]
name = "nitinol-protocol"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }


[dependencies]
nitinol-core = { version = "1.0.0", path = "../nitinol-core" }

thiserror = { workspace = true }
async-trait = { workspace = true }
time = { workspace = true }

# Optional dependencies specific to this crate
[dependencies.sqlx]
optional = true
version = "^0.8"
default-features = false
features = ["migrate", "macros", "time"]
