[package]
name = "nitinol-resolver"
version = "0.1.0"
description = "Library for Nitinol to abstract how to process Events to Entity"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
process = ["dep:nitinol-process"]

[dependencies]
thiserror = { workspace = true }
async-trait = { workspace = true }

tracing = { workspace = true }

nitinol-core = { version = "1.0.0", path = "../nitinol-core" }
nitinol-process = { version = "0.1.0", path = "../nitinol-process", optional = true }

[dev-dependencies]
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
