[package]
name = "basic-process"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }

[dependencies]
nitinol = { path = "../..", features = ["process", "macro"] }

async-trait = "^0.1"

serde = { version = "^1", features = ["derive"] }
serde_json = "^1"

anyhow = "^1"

tokio = { version = "^1", default-features = false, features = ["rt-multi-thread", "macros"] }
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
console-subscriber = "^0.4"
