[package]
name = "persistence-process-sqlite"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
nitinol = { version = "0.4.1", features = ["process", "macro", "persistence"] }
nitinol-sqlite-adaptor = "0.1.0"

async-trait = "^0.1"

serde = { version = "^1", features = ["derive"] }
serde_json = "^1"

anyhow = "^1"

tokio = { version = "^1", default-features = false, features = ["rt-multi-thread", "macros"] }
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
